--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,6 @@
   "author": "Muhammad Abbas",
   "action": {
     "default_popup": "index.html",
-    "default_title": "Latest Covid Report",
-    "default_icon": "icon.png"
+    "default_title": "Check Grammar of Tweets"
   }
 }
